--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "lint": "eslint src/**/*{.ts,.tsx}",
+    "lint:fix": "eslint src/**/*{.ts,.tsx} --fix",
+    "preview": "vite preview",
+    "type-check": "tsc --noEmit",
+    "prettier:write": "prettier --write \"src/**/*.{ts,tsx,css,scss,html}\"",
+    "prettier:check": "prettier --check \"src/**/*.{ts,tsx,css,scss,html}\"",
+    "preinstall": "node add-husky-hooks.js",
+    "prepare": "husky"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.61.0",
@@ -26,8 +32,20 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "pnpm eslint --fix",
+      "pnpm prettier --write"
+    ],
+    "src/**/*.{css,scss}": [
+      "pnpm prettier --write"
+    ]
   }
 }
